// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 item 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $40.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple items 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $40.00
  </h1>
</div>
`;
